unpackaged/main/default/objects/SDO_SFS_Field_Capacity_Transfer__c/SDO_SFS_Field_Capacity_Transfer__c.object-meta.xml
<CustomObject>
    <description>What: Field Capacity Transfer object. Who: Laura Bode and SFS team.
Used in analytics demo tool</description>
    <label>Field Capacity Transfer</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Field Capacity Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Capacity Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>