unpackaged/main/default/objects/SDO_SFS_Field_Capacity_Transfer__c/fields/Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Hours__c</fullName>
    <label>Capacity (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>