unpackaged/main/default/objects/SDO_SFS_Field_Capacity_Transfer__c/fields/Field_Capacity_Record__c.field-meta.xml
<CustomField>
    <fullName>Field_Capacity_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Capacity Record</label>
    <referenceTo>SDO_SFS_Field_Capacity__c</referenceTo>
    <relationshipLabel>Field Capacity Transfers</relationshipLabel>
    <relationshipName>Field_Capacity_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>