unpackaged/main/default/objects/SDO_SFS_Field_Capacity_Transfer__c/fields/Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer From</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Field Capacity Transfers (Transfer From)</relationshipLabel>
    <relationshipName>Field_Capacity_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>