unpackaged/main/default/objects/SDO_SFS_Field_Capacity_Transfer__c/fields/Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer To</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Field Capacity Transfers</relationshipLabel>
    <relationshipName>Field_Capacity_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>